# haskell-foreign-library-example

./: ChangeLog.md  LICENSE  README.md  foreign-library-example.cabal  test.c
.github/workflows/: build.yaml
lib/: ForeignLib.hs  cbits.c  example.def  example.h  example.map
src/: Lib.hs
